# cr-server

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
docs/: configuration.md
sandbox/: mplfinance.py
src/: build.sh  passenger_wsgi.py  requirements.txt  vercel.json
src/commons/: base_models.py
src/fe_backtrader/: apps.py
src/fe_backtrader/engine/: cr_cerebro.py
src/fe_backtrader/engine/strategies/: base.py  sma3.py
src/fe_backtrader/management/commands/: sma3.py
src/fe_cr/: admin.py  apps.py  models.py  services.py  tables.py
src/fe_cr/management/commands/: ibovespa.csv  import_data.py  import_ibovespa.py  update_tickers.py
src/fe_cr/migrations/: 0001_initial.py  0002_tickerdata.py  0003_strategy.py  0004_strategyexecution.py  0005_strategyexecution_chart_data.py
src/fe_frontend/: apps.py  filters.py  urls.py  views.py  views_x.py
src/fe_frontend/templates/: index.html
src/fe_frontend/templates/base/: base.html  navbar.html
src/fe_frontend/templates/htmx/graphics/: img.html  tickers.html
src/fe_frontend/templates/htmx/results/: graphic.html  list.html
src/fe_frontend/templates/htmx/tickers/: list.html
src/fe_frontend/templates/main/: graphics.html  results.html  strategies.html  tickers.html
src/fe_frontend/templates/tables/: strategy-execution.html
src/fe_tickers/: apps.py  urls.py  views.py
src/server/: settings.py  wsgi.py
src/server/settings/: base.py  dev.py  dreamhost.py
