[tool.poetry]
name = "cr-server"
version = "0.0.1"
description = ""
authors = ["Fernando Espíndola <fer.esp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
psycopg2-binary = "^2.9.9"
yfinance = "^0.2.31"
backtrader = "^1.9.78.123"
mysqlclient = "^2.2.0"
django-tables2 = "^2.6.0"
django-filter = "^23.3"
django-htmx = "^1.17.0"
mplfinance = "^0.12.10b0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[tool.pylint]
disable = [
    "C0115",
    "R0903"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
